[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/TCM_____.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Core/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 3
outline_color = Color( 0.117647, 0.156863, 0.898039, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.0235294, 0.0235294, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -328.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Hacking
2020"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -67.0
margin_right = 118.0
margin_bottom = 186.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 236.0
margin_bottom = 27.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0352941, 0.105882, 0.662745, 1 )
text = "HACK!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 236.0
margin_bottom = 58.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0352941, 0.105882, 0.662745, 1 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 236.0
margin_bottom = 89.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0352941, 0.105882, 0.662745, 1 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
